--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -5,9 +5,12 @@ on:
     - cron: '0 7 * * *'  # 7 AM UTC = 11 AM Dubai time
   workflow_dispatch:     # allows manual trigger
 
-jobs:
+jobs:jobs:
   run-autoblogger:
     runs-on: ubuntu-latest
+
+    env:
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}  # ← This is how the script "sees" it
 
     steps:
       - name: Checkout repo
@@ -17,6 +20,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run script
+        run: python main.py
 
       - name: Install dependencies
         run: |
