--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -1,38 +1,29 @@
-name: Daily Real Estate Autoblog
+name: 🏡 Real Estate Autoblogger Daily Run
 
 on:
+  workflow_dispatch:  # allows manual run
   schedule:
-    - cron: '0 7 * * *'  # 7 AM UTC = 11 AM Dubai time
-  workflow_dispatch:     # allows manual trigger
+    - cron: '0 10 * * *'  # runs every day at 10 AM UTC
 
-jobs:jobs:
+jobs:
   run-autoblogger:
     runs-on: ubuntu-latest
 
     env:
-      HF_TOKEN: ${{ secrets.HF_TOKEN }}  # ← This is how the script "sees" it
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}  # 👈 Makes your Hugging Face token available to Python
 
     steps:
-      - name: Checkout repo
+      - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: |
           pip install -r requirements.txt
 
-      - name: Run script
+      - name: 🚀 Run blog generator
         run: python main.py
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytrends python-dotenv huggingface-hub
-
-      - name: Run script
-        run: |
-          python main.py
